# URO-QT

./: CMakeLists.txt  README.md  alkokalkulacka.cpp  hlavicka.h  main.cpp
